Improve time range display

--- a/layouts/shortcodes/cv/experience.gohtml
+++ b/layouts/shortcodes/cv/experience.gohtml
@@ -11,8 +11,7 @@
                         {{-  end -}}
                         {{- .year -}}
                     {{- end -}}
-                    <br>
-                    {{- "- " -}}
+                    &nbsp;-&nbsp;
                     {{- with .to -}}
                         {{- with .month -}}
                             {{- printf "%02d" . -}}/
