--- a/layouts/shortcodes/cv/education.gohtml
+++ b/layouts/shortcodes/cv/education.gohtml
@@ -14,8 +14,7 @@
                         {{-  end -}}
                         {{- .year -}}
                     {{- end -}}
-                    <br>
-                    {{- "- " -}}
+                    &nbsp;-&nbsp;
                     {{- with .to -}}
                         {{- with .month -}}
                             {{- printf "%02d" . -}}/
