Improve grant amount display

--- a/layouts/shortcodes/cv/awards.gohtml
+++ b/layouts/shortcodes/cv/awards.gohtml
@@ -25,7 +25,7 @@
                     </a>
                     {{-  end -}}
                     {{- with .value -}}
-                        &emsp;
+                        &nbsp;
                         <small>{{- lang.NumFmt 0 .sum "- , ." -}} {{- .unit -}}</small>
                     {{- end -}}
                     {{- with .description -}}
