--- a/layouts/partials/site/styles.html
+++ b/layouts/partials/site/styles.html
@@ -2,11 +2,14 @@
 {{- $style := resources.Get "/css/main.scss" | resources.ToCSS $options -}}
 <link rel="stylesheet" href="{{ $style.Permalink }}">
 
-{{/* Publish Font Awesome web fonts. */}}
-{{- $fontawesomeWebfonts := resources.Match "/node_modules/@fortawesome/fontawesome-free/webfonts/*" -}}
-{{- range $fontawesomeWebfonts -}}
-  {{- $name := .Name | strings.TrimPrefix "/node_modules/@fortawesome/fontawesome-free/webfonts/" | printf "/webfonts/fontawesome/%s" -}}
-  {{- with resources.Copy $name . -}}
-    {{- .Publish -}}
+{{/* Publish fonts. */}}
+{{- $fontsPathPrefixes := collections.Slice "/node_modules/@fortawesome/fontawesome-free/webfonts/" "/node_modules/academicons/fonts/" -}}
+{{- range $fontsPathPrefix := $fontsPathPrefixes -}}
+  {{- $fonts := resources.Match (printf "%s/*" $fontsPathPrefix) -}}
+  {{- range $fonts -}}
+    {{- $name := .Name | strings.TrimPrefix $fontsPathPrefix | printf "/fonts/%s" -}}
+    {{- with resources.Copy $name . -}}
+      {{- .Publish -}}
+    {{- end -}}
   {{- end -}}
 {{- end -}}
