Migrate to icon font

--- a/layouts/partials/site/footer.html
+++ b/layouts/partials/site/footer.html
@@ -6,7 +6,7 @@
     <p>
         <a href='{{ relref $ "/imprint#license" }}'
            title="CC0 1.0 Universal Public Domain Dedication">
-            {{- partial "icon/cc" "zero" -}}
+           <i class="fa-brands fa-creative-commons-zero"></i>
         </a> {{ now.Format "2006" }} {{ $.Site.Data.facts.name }}.
     </p>
     {{ if (or $.Site.Menus.footer $.Site.IsMultiLingual) }}
