--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -36,15 +36,10 @@
         {{- end -}}
     {{- end -}}
 
-    {{/* NOTE: These Hugo Internal Templates can be found starting at
-    https://github.com/spf13/hugo/blob/master/tpl/tplimpl/template_embedded.go#L158 */}}
+    {{/* NOTE: These Hugo Internal Templates can be found starting at https://github.com/gohugoio/hugo/tree/master/tpl/tplimpl/embedded/templates */}}
     {{- template "_internal/opengraph.html" . -}}
     {{- template "_internal/schema.html" . -}}
     {{- template "_internal/twitter_cards.html" . -}}
-
-    {{- if eq (getenv "HUGO_ENV") "production" -}}
-        {{- template "_internal/google_analytics_async.html" . -}}
-    {{- end -}}
 </head>
 
 <body class="{{ if .IsHome }} home {{ else }} page-{{ anchorize .Title }} {{ end }}">
